--- a/main.tex
+++ b/main.tex
@@ -89,7 +89,7 @@ AUTORIZO a mi hijo/a a participar en la actividad organizada por JMV descrita en
 \begin{Form}
     Asimismo, \ChoiceMenu[combo, name=pics]{}{AUTORIZO, NO AUTORIZO} a JMV a publicar fotografías y vídeos en los que aparezca mi hijo/a en sus redes sociales, páginas web y otros medios habituales, así como medios físicos de carácter promocional de la asociación, siempre sin ánimo de lucro.
 
-    Además, MANIFIESTO que mi hijo/a \ChoiceMenu[combo,name=medical_attention,default={NO PADECE},value={NO PADECE}]{ }{NO PADECE, PADECE} alergias, intolerancias o condiciones médicas que deban ser tenidas en cuenta durante el desarrollo de la actividad (\textit{en caso afirmativo, rellene el anexo sobre condiciones médicas}).
+    Además, MANIFIESTO que mi hijo/a \ChoiceMenu[combo,name=medical_attention,default={NO PADECE},value={NO PADECE}]{ }{NO PADECE, PADECE} alergias, intolerancias o condiciones médicas que deban ser tenidas en cuenta durante el desarrollo de la actividad y \ChoiceMenu[combo,name=medical_attention,default={NO PRECISA},value={NO PRECISA}]{ }{NO PRECISA, PRECISA} la administración de medicamentos (\textit{en caso afirmativo, rellene el anexo sobre condiciones médicas}).
 \end{Form}
 
 Para que así conste, firmo este documento.
